--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -4,13 +4,13 @@
     padding:30px;
     position:fixed;
     width:80%;
-    
+    z-index: 4;
     border:0px;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
 
 }
 .sizeheader.active{
-    background-color: #19181a96;
+    background-color: #19181a9d;
     border:0px;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
 
