--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,7 +2,7 @@
     color: white;
     background-color: #19181A;
     padding-top: 3em;
-    position: fixed;
+    position: relative;
     bottom: 0;
     width: 80%;
     margin-left:20%;
