--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,9 +1,9 @@
 .size {
     margin-left: 20%;
-    /*--color-1: #1e1e1f;
+   /* --color-1: #121214;
     --color-2: rgb(70, 68, 77);
     background: linear-gradient(100deg, var(--color-1), var(--color-2));*/
-   /* background-color:#363535;*/
+    background-color:#111010;
     width:80%;
     
 }
