--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,15 +1,41 @@
+@import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
+.fonts-footer{
+    font-family: 'Press Start 2P';
+    color :#38e2ee;
+}
 .footer-main {
     color: white;
-    background-color: #19181A;
+    /*background-color: #262527;*/
+    background-image: linear-gradient(45deg, #040405 10%, #0b0d0d 10%, #0b0d0d 50%, #040405 50%, #040405 60%, #0b0d0d 60%, #0b0d0d 100%);
+    background-size: 7.07px 7.07px;
     padding-top: 3em;
     position: relative;
-    bottom: 0;
-    width: 80%;
-    margin-left:20%;
-    
-  }
-  
-  .margin{
+    padding-bottom: 2%;
+    width: 100%;
+    left:0; 
+}
+ 
+.margin{
       margin-left:30%;
-  }
+}
+.link-color{
+      display:block;
+      padding:10px;
+      color: white;
+      
+      width:30%;
+      margin-left:35%;
+      
+}
+.link-color:hover{
+      background-color: #35d3d3;
+      color: white;
+      
+}
+.padding-footer{
+    padding-top:30px;    
+}
+.footer-clr{
+    background-color: #38e2eeee;
+}
   
