--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,17 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 .fonts{
     font-family: 'Press Start 2P';
-    font-size:x-large;
+    
+    text-align:left;
+    color :#38e2ee;
+    
+    
+    
 }
 .sizeheader{
-    margin-left:20%;
-    background-color: #746d6d00;
-    padding:15px;
+    background-color: #11131300;
+    padding:6px;
     position:fixed;
-    width:80%;
+    width:100%;
     z-index: 4;
     border:0px;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+    display: inline-block;
 
 }
 .sizeheader a{
@@ -28,29 +33,105 @@
 }
 
 .sizeheader.active{
-    background-color: #c79125;
+    background-color:#111313;
     border:0px;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+    display: inline-block;
+    
+
+    
 
 }
-.sizeheader.active a{
-    color:#0b0c0b;
-}
-.sizeheader.active i{
-    color:#0b0c0b;
-}
-.sizeheader.active a:hover{
-    color: #0b0c0b;
-}
+
+
+
+
 .right{
-    margin-left:75%;
+    margin-left:35%;
 }
-.headeritem{
-    display:inline-block;
-    margin-right:5%;
-    padding:10px; 
-}
-.headeritem:hover{
+
+.headeritem-login{
+    margin-left:10%;
+    display: inline-block;
+    padding:10px;
+    width:60px;
     border-radius: 20px;
-    background-color: #f8c212be;
+    border:1px solid  #38e2ee;
+    
+    
+}
+.headeritem-login:hover{
+    background-color: #38e2ee;
+    color:white;
+}
+.headeritem-login a{
+    color:rgb(19, 138, 146);
+}
+.headeritem-login a:hover{
+    color:white;
+}
+.headeritem-signin{
+    margin-left:10%;
+    display: inline-block;
+    color:white;
+    padding:10px;
+    width:60px;
+    
+}
+
+.headeritem-signin:hover{
+    border-radius: 20px;
+    background-color: #47e9e9cb;
+    
+    
+}
+.headeritem-signin a{
+    color:rgb(18, 99, 105);
+}
+.headeritem-signin a:hover{
+    color:white;
+}
+.icon-social{
+    text-align:right;
+    margin-top:2%;
+
+}
+.headers{
+    padding-bottom:15px;
+    position: fixed;
+    background-color: rgb(255, 255, 255);
+    width:100%;
+    z-index: 10;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+}
+.header-transparent{
+    background-color: rgba(245, 245, 220, 0);
+    padding-bottom:15px;
+    position: fixed;
+    width:100%;
+    z-index: 10;
+    transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+}
+.row-padding{
+    margin-top: 20px;
+}
+.sidebar-icon{
+    position: fixed;
+    display: none;
+    left:10px;
+    z-index: 10;
+}
+.align-social{
+    display: inline-block;
+    margin-left:3%;
+}
+@media only screen and (max-width:1000px){
+    .sidebar-icon{
+        display:block;
+    }  
+}
+@media  only screen and (max-width:480px){
+    .header-transparent{
+        background-color: white;
+    }  
 }
