--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,22 +2,34 @@
 .fonts-footer{
     font-family: 'Press Start 2P';
     color :#38e2ee;
+    font-size:10px;
+}
+.fonts-copyright{
+    font-family: 'Press Start 2P';
+    font-size:8px;
 }
 .footer-main {
     color: white;
     /*background-color: #262527;*/
-    background-image: linear-gradient(45deg, #040405 10%, #0b0d0d 10%, #0b0d0d 50%, #040405 50%, #040405 60%, #0b0d0d 60%, #0b0d0d 100%);
-    background-size: 7.07px 7.07px;
+
+    background-image: linear-gradient(45deg, #000000 12.50%, #09090a 12.50%, #09090a 50%, #000000 50%, #000000 62.50%, #09090a 62.50%, #09090a 100%);
+background-size: 5.66px 5.66px;
     padding-top: 3em;
     position: relative;
-    padding-bottom: 2%;
+    
     width: 100%;
     left:0; 
 }
  
 .margin{
-      margin-left:30%;
-}
+    
+    padding-top: 3em;
+    position: relative;
+    padding-bottom: 3%;
+    width: 100%;
+    left:0; 
+  }
+  
 .link-color{
       display:block;
       padding:10px;
@@ -38,4 +50,40 @@
 .footer-clr{
     background-color: #38e2eeee;
 }
-  
+.footer-input{
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #3be7d0;
+    width:80%;
+    outline:none;
+    margin-bottom:10px;
+   
+}
+.footer-input:focus{
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #42c1e0;
+    width:80%;
+    outline:none;
+   
+}
+.footer-copyright{
+    padding-top:30px;
+    color:#756d6d;
+}
+.footer-update{
+    font-family: 'Press Start 2P';
+    font-size: 10px;
+   
+}
+@media only screen and (max-width:800px){
+    .fonts-footer{
+        font-size: 15px;
+    }
+    .fonts-copyright{
+        font-size: 10px;
+    }
+    .footer-update{
+        font-size: 15px;
+    }
+}
