--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,12 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 .fonts{
     font-family: 'Press Start 2P';
+
+    font-size:30px;
+    text-align:left;
+    color :#38e2ee00;
+    
+    
+    
+}
+.header-fonts{
+    font-family: 'Press Start 2P';
+    font-size:10px;
+
     
     text-align:left;
     color :#38e2ee;
     
     
     
+
 }
 .sizeheader{
     background-color: #11131300;
@@ -48,6 +61,7 @@
 
 .right{
     margin-left:35%;
+
 }
 
 .headeritem-login{
@@ -57,38 +71,63 @@
     width:60px;
     border-radius: 20px;
     border:1px solid  #38e2ee;
+    width:70px;
     
     
+}
+
+
+.headeritem-login a{
+    color:white;
+}
+.headeritem-login a:hover{
+    color:rgb(18, 99, 105);
 }
 .headeritem-login:hover{
     background-color: #38e2ee;
     color:white;
+    
 }
-.headeritem-login a{
-    color:rgb(19, 138, 146);
-}
-.headeritem-login a:hover{
-    color:white;
-}
+
+
 .headeritem-signin{
+
     margin-left:10%;
     display: inline-block;
     color:white;
     padding:10px;
-    width:60px;
+    width:90px;
+    border-radius: 20px;
+
+    
     
 }
 
 .headeritem-signin:hover{
+    background-color: #38e2ee;
+    color:white;
+    
+}
+
+.headeritem:hover{
+
     border-radius: 20px;
     background-color: #47e9e9cb;
     
     
 }
+
 .headeritem-signin a{
-    color:rgb(18, 99, 105);
+    color:white;
 }
 .headeritem-signin a:hover{
+    color:rgb(18, 99, 105);
+}
+.headeritem a{
+    color:black;
+}
+.headeritem a:hover{
+
     color:white;
 }
 .icon-social{
@@ -99,10 +138,17 @@
 .headers{
     padding-bottom:15px;
     position: fixed;
+
     background-color: rgb(255, 255, 255);
+
+    
+
     width:100%;
     z-index: 10;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+}
+.headers a{
+    color:#38e2ee;
 }
 .header-transparent{
     background-color: rgba(245, 245, 220, 0);
@@ -111,6 +157,9 @@
     width:100%;
     z-index: 10;
     transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+}
+.header-transparent i{
+    color:white;
 }
 .row-padding{
     margin-top: 20px;
@@ -129,6 +178,10 @@
     .sidebar-icon{
         display:block;
     }  
+
+    .fonts{
+        font-size:15px;
+    }
 }
 @media  only screen and (max-width:480px){
     .header-transparent{
