--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -88,6 +88,7 @@
     transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
 }
 
+
 .row-padding {
     margin-top: 20px;
 }
@@ -107,6 +108,10 @@
 @media only screen and (max-width:1000px) {
     .sidebar-icon {
         display: block;
+        color:white
+    }
+    .headers .sidebar-icon i{
+        color:black
     }
 }
 
@@ -122,6 +127,9 @@
     }
     .header-transparent .icon-social i{
         color:black;
+    }
+    .header-transparent .sidebar-icon i{
+        color:black
     }
     
 }
