--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,7 +8,7 @@
 
 .fonts-copyright {
     font-family: 'Press Start 2P';
-    font-size: 8px;
+    font-size: 9px;
 }
 
 .footer-main {
@@ -25,7 +25,7 @@
 .margin {
     padding-top: 3em;
     position: relative;
-    padding-bottom: 3%;
+    padding-bottom: 2%;
     width: 100%;
     left: 0;
 }
@@ -34,13 +34,16 @@
     display: block;
     padding: 10px;
     color: white;
-    width: 30%;
+    width: 40%;
     margin-left: 35%;
+    transition: 0.5s;
+    text-decoration: none;
 }
 
     .link-color:hover {
         background-color: #35d3d3;
         color: white;
+        transition: 0.5s;
     }
 
 .padding-footer {
@@ -77,7 +80,25 @@
     font-family: 'Press Start 2P';
     font-size: 10px;
 }
-
+.footer-first{
+    text-align: left;
+    padding-bottom: 40px;
+    font-family: 'Press Start 2P';
+    font-size: 15px;
+    transform: scale(1,1.5);
+    text-shadow: 1px 2px 1px #38ccc5, 0 0 1px #f4f7f8;
+}
+.footer-second{
+    text-align: left;
+    line-height: 30px;
+    color:#66666d;
+    transition: 1s;
+   
+}
+.footer-second:hover{
+    color:#4ab8b8b6;
+    transition: 1s;
+}
 @media only screen and (max-width:800px) {
     .fonts-footer {
         font-size: 15px;
