--- a/src/components/SnakePage.css
+++ b/src/components/SnakePage.css
@@ -8,5 +8,29 @@ h2{
 }
 .snake{
     
-    margin-left:20%;
+    width:100%;
+}
+.snake-title{
+    padding-top:120px
+}
+.snake-play{
+    background-color: #44b5d1;
+    padding: 10px;
+    color:white;
+    border-radius: 5px;
+    transition: 1s;
+    width:10%;
+    border:none;
+}
+.snake-play:hover{
+    background-color: white;
+    color:#44b5d1;
+    border:1px solid #44b5d1;
+    padding: 10px;
+    border-radius:5px ;
+    transition: 1s;
+    width:10%
+}
+.snake-track{
+    padding-bottom: 30px;
 }
