--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,94 +1,85 @@
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 
+.blue-tooltip + .tooltip > .tooltip-inner {
+    background-color: rgb(59, 224, 224);
+    padding: 10px
+}
+
+.tooltip-arrow {
+    color: #49d5da;
+    width: 10px
+}
+
 .fonts {
     font-family: 'Press Start 2P';
+    font-size: 30px;
+    text-align: left;
+    color: #38e2ee;
+    text-shadow: 1px 3px 1px #ffffff, 0 0 5px #52c5e2;
+    margin-top: 20px;
+}
+
+.headers .fonts {
+    text-shadow: 1px 3px 1px #0a0909, 0 0 5px #21353a;
+}
+
+.header-fonts {
+    font-family: 'Press Start 2P';
+    font-size: 10px;
     text-align: left;
     color: #38e2ee;
 }
 
-.sizeheader {
-    background-color: #11131300;
-    padding: 6px;
-    position: fixed;
-    width: 100%;
-    z-index: 4;
-    border: 0px;
-    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+.header-input {
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid #42c1e0;
+    width: 80%;
+    outline: none;
+}
+
+.header-modal-signin-1 {
     display: inline-block;
+    width: 50%;
 }
 
-    .sizeheader a {
-        color: #f3f3ef;
-    }
-
-        .sizeheader a:hover {
-            color: #f5f4ed;
-        }
-
-    .sizeheader i {
-        color: #f8f7ec;
-    }
-
-    .sizeheader.active {
-        background-color: #111313;
-        border: 0px;
-        transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
-        display: inline-block;
-    }
-
-
-
-
-.right {
-    margin-left: 35%;
-}
-
-#login {
-    border-radius: 20px;
-    background-color: #47e9e9cb;
-}
-
-    #login a {
-        color: white;
-    }
-
-    #login:hover {
-        background-color: #47e9e970;
-    }
-
-.headeritem {
-    margin-left: 10%;
+.header-modal-signin-2 {
     display: inline-block;
-    color: white;
-    padding: 10px;
-    width: 60px;
+    width: 50%;
 }
-
-    .headeritem:hover {
-        border-radius: 20px;
-        background-color: #47e9e9cb;
-    }
-
-    .headeritem a {
-        color: black;
-    }
-
-        .headeritem a:hover {
-            color: white;
-        }
 
 .icon-social {
     text-align: right;
     margin-top: 2%;
 }
 
+    .icon-social i {
+        color: white;
+    }
+
 .headers {
     padding-bottom: 15px;
     position: fixed;
     background-color: rgb(254, 255, 249);
     width: 100%;
-    z-index: 10;
+    z-index: 12;
     transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
+}
+
+    .headers .icon-social i {
+        color: black;
+    }
+
+    .headers .headeritem-login a {
+        color: #38e2ee
+    }
+
+    .headers .headeritem-signin a {
+        color: #38e2ee
+    }
+
+.header-google {
+    width: 100%;
 }
 
 .header-transparent {
@@ -126,33 +117,386 @@
     .header-transparent {
         background-color: white;
     }
+
+        .header-transparent .headeritem-login a {
+            color: #38e2ee
+        }
+
+        .header-transparent .headeritem-signin a {
+            color: #38e2ee;
+        }
+
+        .header-transparent .icon-social i {
+            color: black;
+        }
 }
 
-.sizeheader2 {
-    margin-left: 0%;
-    background-color: darkmagenta;
-    padding: 0px;
-    
-    width: 100%;
-    z-index: 3;
-    border: 0px;
-    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
-    cursor: pointer;
-}
 
-.sizeheader.active2 {
-    background-color: aquamarine;
-    border: 0px;
-    transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
-    z-index: 3;
-    cursor: pointer;
-}
-
-.headeritem2 {
+.headeritem-login {
+    margin-left: 10%;
     display: inline-block;
-    margin-right: 0%;
-    padding: 0px;
-    z-index: 3;
-    cursor: pointer;
+    padding: 10px;
+    width: 60px;
+    border-radius: 20px;
+    border: 1px solid #38e2ee;
+    width: 70px;
 }
 
+
+    .headeritem-login a {
+        color: white;
+    }
+
+        .headeritem-login a:hover {
+            color: rgb(18, 99, 105);
+        }
+
+    .headeritem-login:hover {
+        background-color: #38e2ee;
+        color: white;
+    }
+
+
+.headeritem-signin {
+    margin-left: 10%;
+    display: inline-block;
+    color: white;
+    padding: 10px;
+    width: 90px;
+    border-radius: 20px;
+}
+
+    .headeritem-signin:hover {
+        background-color: #38e2ee;
+        color: white;
+    }
+
+
+    .headeritem-signin a {
+        color: white;
+    }
+
+        .headeritem-signin a:hover {
+            color: rgb(18, 99, 105);
+        }
+
+.form-dialog {
+    width: 100%;
+    max-width: 450px;
+}
+
+.modal-header {
+    background: #ff5108;
+}
+
+.modal-body {
+    overflow-y: auto;
+    padding-right: 35px;
+    padding-bottom: 35px;
+    padding-left: 35px;
+    border-radius: 10px;
+}
+
+    .modal-body h2 {
+        font-size: 24px;
+    }
+
+    .modal-body .subtitle {
+        margin-top: 0;
+        margin-bottom: 36px;
+    }
+
+.modal-dialog-center {
+    position: relative;
+    margin: 30px auto;
+}
+
+.modal-header .close {
+    margin-top: -2px;
+    outline: none;
+    opacity: 1;
+    color: #fff;
+}
+
+.videoModal .modal-header {
+    background: #fff;
+}
+
+.videoModal .modal-content {
+    box-shadow: none;
+    border-radius: 0;
+    border: 0;
+}
+
+.videoModal .modal-body {
+    padding: 9px 10px;
+}
+
+.videoModal .modal-header .close {
+    color: #151515;
+}
+
+.modal-open .header {
+    padding-right: 17px;
+}
+
+/****** Media query style ******/
+@media screen and (min-width: 0) and (max-width: 1280px) {
+    .navbar-header {
+        min-width: 350px;
+    }
+
+    .navbar-default .navbar-nav > li > .dropdown-menu {
+        min-width: 170px;
+    }
+}
+
+@media screen and (min-width: 0) and (max-width: 1024px) {
+    .header .container {
+        padding: 0;
+    }
+
+    .navbar-default .navbar-collapse.collapse {
+        display: none !important;
+    }
+
+    .navbar-default .navbar-nav li a {
+        color: #151515;
+    }
+
+    .navbar-collapse {
+        position: absolute;
+        top: 65px;
+        left: 0;
+        width: 100%;
+        margin: 0 !important;
+        background-color: #ecebeb;
+        border-top: 1px solid rgba(0, 0, 0, 0);
+        box-shadow: 0 7px 18px 0 rgba(0, 0, 0, .2);
+    }
+
+        .navbar-collapse.collapse.in {
+            display: block !important;
+        }
+
+        .navbar-collapse .navbar-right li {
+            margin: 0 10px;
+            display: inline-block;
+        }
+
+    .navbar-nav {
+        float: none !important;
+        margin: 7.5px -15px;
+    }
+
+    .navbar .logo {
+        padding-left: 15px;
+    }
+
+    .collapsed-color {
+        padding: 20px 0;
+        background-color: #f6f5f4;
+        box-shadow: 0 7px 22px 0 rgba(0, 0, 0, .4);
+    }
+
+    .header ul.nav {
+        display: block;
+        margin-bottom: 0;
+        padding: 13px 0 20px;
+    }
+
+    .pricing .contact-wrap {
+        min-height: 0;
+        margin: 30px 0 20px;
+    }
+
+    .pricing .features {
+        padding: 20px;
+    }
+
+    .cost-line p {
+        font-size: 25px;
+    }
+
+        .cost-line p span {
+            font-size: 50px;
+        }
+
+    .pricing .prices {
+        margin: 0 auto 30px;
+    }
+
+    .pricing .price-inner {
+        padding: 20px 30px;
+    }
+
+    .pricing .contact-wrap .title {
+        font-size: 28px;
+        line-height: 1.2;
+        margin-left: 15px;
+        margin-top: -3px;
+    }
+
+    .pricing .contact-wrap span:first-child {
+        margin: 0;
+    }
+
+    .cost-line {
+        min-height: 81px;
+    }
+
+    .nav-toggle {
+        display: block;
+    }
+}
+
+@media screen and (min-width: 0) and (max-width: 1023px) {
+    .pricing .contact-wrap .title {
+        font-size: 20px;
+    }
+}
+
+@media screen and (min-width: 0) and (max-width: 768px) {
+    h2 {
+        font-size: 30px;
+    }
+
+        h2 span {
+            display: block;
+        }
+
+    h4, h5 {
+        font-size: 17px;
+    }
+
+    .typing-block {
+        font-size: 30px;
+    }
+
+    .margin-bottom-max {
+        margin-bottom: 60px;
+    }
+
+    .main-container .row {
+        margin: 30px 0 0;
+    }
+
+    .advantages-wrap p {
+        font-size: 14px;
+    }
+
+    .advantages-wrap h4 {
+        margin: 10px auto 15px;
+    }
+
+    .tab-container .nav-tabs a {
+        font-size: 14px;
+        padding: 8px 35px;
+    }
+
+    .pricing .contact-wrap {
+        margin: 30px 0;
+    }
+
+        .pricing .contact-wrap .title {
+            font-size: 30px;
+        }
+
+    .pricing .subtitle {
+        width: 100%;
+    }
+
+    .team-wrap {
+        margin-top: 0;
+    }
+
+    .footer h5 {
+        margin: 20px 0 10px;
+    }
+
+    .footer-copyright {
+        margin: 40px 0 0;
+    }
+
+    .header ul.nav {
+        padding: 0;
+    }
+
+    .navbar-default .navbar-nav .dropdown.open a {
+        background: #f6f5f4;
+        box-shadow: none;
+        padding: 9px 15px;
+    }
+
+    .navbar-default .navbar-nav .collapsed-color .dropdown .dropdown-menu a {
+        color: #151515;
+    }
+
+    .collapsed-color li {
+        border-bottom: 1px solid #ccc;
+    }
+
+    .collapsed-color .dropdown-menu li:first-child {
+        border-top: 1px solid #ccc;
+    }
+}
+
+@media (max-width: 680px) {
+    .hero-bg .typed-container {
+        margin: 50px 0 0;
+    }
+
+    .product-hero-bg .typing-block {
+        width: 100%;
+    }
+
+    .tab-container .nav-tabs a {
+        padding: 8px 15px;
+    }
+
+    .typing-block {
+        font-size: 25px;
+    }
+
+    .hero-bg p {
+        margin: 17px 0;
+    }
+}
+
+@media screen and (min-width: 0) and (max-width: 420px) {
+    /*    .hero-bg .typed-container {
+        margin: 50px 0 0;
+    }*/
+    .typing-block {
+        font-size: 25px;
+        min-height: 70px;
+    }
+
+    .pricing .contact-wrap .title {
+        font-size: 20px;
+        margin-top: 10px;
+    }
+}
+
+#contactus {
+    margin-left: 60px;
+}
+
+@media screen and (min-width: 0) and (max-width: 1024px) {
+    #login {
+        background: none;
+        color: #000;
+        border: transparent;
+        outline: none;
+    }
+}
+
+
+#center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    height: 300px;
+    width: 300px;
+}
