--- a/src/components/Main1.css
+++ b/src/components/Main1.css
@@ -3,14 +3,23 @@
 
 .main-power-fonts {
     font-family: 'Press Start 2P';
-    font-size: 25px;
+    font-size: 28px;
     text-align: left;
-    color: white;
+    color: #38e2ee00;
+    padding-top: 20px;
+}
+
+.main-power-subfonts {
+    font-family: 'Ubuntu';
+    font-size: 20px;
+    color: #ffffff00;
+    padding-top: 20px;
 }
 
 .main-start-fonts {
     font-family: 'Press Start 2P';
     font-size: 35px;
+    text-shadow: 1px 3px 1px #fffffff5, 0 0 5px #52c5e200;
 }
 
 .main-list-fonts {
@@ -38,12 +47,12 @@
 }
 
 .boxstyle {
-    background-color: #b1b8b893;
+    background-color: #090a0a00;
     margin: 30px;
-    border-right: 4px solid #17d8fa;
-    padding-bottom: 200px;
+    border-left: 2px solid #17d8fa00;
+    padding-bottom: 100px;
     color: white;
-    margin-top: 200px;
+    margin-top: 160px;
     margin-bottom: 100px;
     position: relative;
 }
@@ -58,13 +67,15 @@
 }
 
 .typewriter {
-    padding-top: 30px;
+    padding-top: 40px;
+    padding-bottom: 30px;
 }
 
 .typewriter-display {
     font-size: xx-large;
     display: inline-block;
     color: white;
+    text-shadow: 1px 3px 1px #52c5e2, 0 0 5px #ffffff00;
 }
 
 .typewriter-text {
@@ -74,6 +85,7 @@
 }
 
 .black {
+    font-size: 30px;
     background-image: linear-gradient(45deg, #000000 12.50%, #09090a 12.50%, #09090a 50%, #000000 50%, #000000 62.50%, #09090a 62.50%, #09090a 100%);
     background-size: 5.66px 5.66px;
 }
@@ -105,10 +117,22 @@
     padding-bottom: 40px;
 }
 
+.parallelogram {
+    height: 50px;
+    transform: skew(-20deg);
+    background: #555;
+}
+
+.white-padding {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
 .bg {
-    background-image: url('../images/23.jpg');
+    background-image: url('../images/bg2.jpg');
     padding-bottom: 90px;
     background-size: 100% 100%;
+    height: 700px;
 }
 
     .bg img {
@@ -162,7 +186,6 @@
 }*/
 .main-img {
     border-radius: 10px;
-    ;
 }
 
 button.rec-dot {
@@ -173,8 +196,7 @@ button.rec-dot {
 button.rec-arrow {
     color: white;
     background-color: rgba(0, 255, 255, 0);
-    border-radius: 0px;
-    width: 60px;
+    border-radius: 50px;
 }
 
 .styling-example .rec.rec-arrow:hover {
@@ -208,12 +230,13 @@ button.rec-arrow {
 
 .main-game-img {
     opacity: 1;
+    border-radius: 10px;
 }
 
     .main-game-img:hover {
-        -moz-box-shadow: 0 0 10px rgba(143, 200, 202, 0.788);
-        -webkit-box-shadow: 0 0 10px rgba(143, 200, 202, 0.788);
-        box-shadow: 0 0 10px rgba(87, 197, 201, 0.788);
+        -moz-box-shadow: 0 0 10px rgba(234, 253, 253, 0.788);
+        -webkit-box-shadow: 0 0 10px rgba(236, 251, 252, 0.788);
+        box-shadow: 0 0 10px rgba(244, 250, 250, 0.788);
         transform: scale(1);
         background-position: center;
         background-size: cover;
@@ -236,6 +259,13 @@ button.rec-arrow {
 
     .main-power-fonts {
         font-size: 20px;
+        transform: scale(1.03,2);
+        padding-top: 30px;
+    }
+
+    .main-power-subfonts {
+        padding-top: 30px;
+        font-size: 25px;
     }
 
     .main-start-fonts {
@@ -264,4 +294,9 @@ button.rec-arrow {
     }
 }
 
-
+@media only screen and (max-width:480px) {
+    .boxstyle {
+        margin-top: 250px;
+        ;
+    }
+}
