--- a/src/components/sideBar.css
+++ b/src/components/sideBar.css
@@ -1,7 +1,10 @@
 .sidebar-div {
     position: fixed;
-    height: 100%;
+    height: 338px;
+    margin-top: 10%;
     z-index: 10;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
     /*background-color:#040405 ;*/
     min-width: 53px;
     background-image: linear-gradient(45deg, #000000 12.50%, #09090a 12.50%, #09090a 50%, #000000 50%, #000000 62.50%, #09090a 62.50%, #09090a 100%);
@@ -44,5 +47,11 @@
 
     .disappear {
         display: block;
+    }
+}
+
+@media only screen and (min-width:1000px) {
+    .sidebar-div {
+        height: 338px;
     }
 }
