--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -2,12 +2,11 @@
     position: relative;
     align-content: center;
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
     width: 600px;
     height: 600px;
     border: 2px solid #000;
     background-color: aquamarine;
-    
 }
 
 .snake-dot {
@@ -26,4 +25,8 @@
     background: red;
     border: 1px solid aquamarine;
     z-index: 1;
+}
+
+.snake-menu-title {
+    padding-top: 120px;
 }
