--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -22,7 +22,7 @@
 
 .search-padding {
     padding-top: 50px;
-    padding-bottom: 40px;
+    padding-bottom: 60px;
 }
 
 .search-input {
@@ -33,9 +33,20 @@
     outline: none;
 }
 
-    .search-input:focus {
-        border-bottom: 1px solid #47e7ec;
-    }
+.search-input-result {
+    padding-top: 5px;
+    margin-left: 80px;
+}
+
+.search-input-fonts {
+    color: #0f0909;
+    font-size: 13px;
+    display: inline-block;
+}
+
+.search-input:focus {
+    border-bottom: 1px solid #47e7ec;
+}
 
 .search-black-padding {
     margin-top: 50px;
@@ -67,6 +78,13 @@
     border-radius: 10px;
 }
 
+.search-noresult {
+    color: white;
+    font-family: 'Press Start 2P';
+    font-size: 15px;
+    text-shadow: 0px 2px 0px #4dd8e2, 0 0 5px #52c5e200;
+}
+
 .search-list-img {
     margin-top: 30px;
     margin-bottom: 40px;
@@ -77,10 +95,10 @@
     }
 
         .search-list-img img:hover {
-            background-color: #47e6ec8c;
-            -moz-box-shadow: 0 0 10px rgba(143, 200, 202, 0.788);
-            -webkit-box-shadow: 0 0 10px rgba(143, 200, 202, 0.788);
-            box-shadow: 0 0 10px rgba(87, 197, 201, 0.788);
+            background-color: #f3f5f58c;
+            -moz-box-shadow: 0 0 10px rgba(238, 248, 248, 0.788);
+            -webkit-box-shadow: 0 0 10px rgba(235, 243, 243, 0.788);
+            box-shadow: 0 0 10px rgba(244, 250, 250, 0.788);
             transform: scale(1);
             background-position: center;
             background-size: cover;
