--- a/src/components/SnakePage.css
+++ b/src/components/SnakePage.css
@@ -1,12 +1,40 @@
-h1{
-    text-align:center;
+h1 {
+    text-align: center;
 }
 
-h2{
+h2 {
     text-align: center;
     color: aquamarine;
 }
-.snake{
-    
-    margin-left:20%;
+
+.snake {
+    width: 100%;
+}
+
+.snake-title {
+    padding-top: 120px
+}
+
+.snake-play {
+    background-color: #44b5d1;
+    padding: 10px;
+    color: white;
+    border-radius: 5px;
+    transition: 1s;
+    width: 10%;
+    border: none;
+}
+
+    .snake-play:hover {
+        background-color: white;
+        color: #44b5d1;
+        border: 1px solid #44b5d1;
+        padding: 10px;
+        border-radius: 5px;
+        transition: 1s;
+        width: 10%
+    }
+
+.snake-track {
+    padding-bottom: 30px;
 }
