--- a/src/components/games/breakout/Board.css
+++ b/src/components/games/breakout/Board.css
@@ -1,7 +1,10 @@
 #canvasy {
     background-color: rgba(19, 73, 89, 0.7);
 }
-
+.breakout-bg{
+    background-image: url(../../../images/bg.png);
+    background-size: 100% 100%;
+}
 .gameHeader {
     font-family: "Sedgwick Ave", cursive;
     color: white;
