--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,19 +9,22 @@
     color: #49d5da;
     width: 10px
 }
-
+.align-logo{
+    text-align: left;
+}
 .fonts {
-    font-family: 'Press Start 2P';
-    font-size: 30px;
+   
     text-align: left;
     color: #38e2ee;
-    text-shadow: 1px 3px 1px #ffffff, 0 0 5px #52c5e2;
-    margin-top: 20px;
+    margin-top: 10px;
+}
+@media only screen and (max-width:520px) {
+    .fonts{
+        width:190px;
+        height: 40px;
+    }
 }
 
-.headers .fonts {
-    text-shadow: 1px 3px 1px #0a0909, 0 0 5px #21353a;
-}
 .header-welcome{
     font-family: 'Press Start 2P';
     font-size: 10px;
@@ -49,22 +52,25 @@
     background: transparent;
     border: none;
     border-bottom: 1px solid #42c1e0;
-    width: 80%;
+    width: 100%;
     outline: none;
 }
 
 .header-modal-signin-1 {
-    display: inline-block;
-    width: 50%;
+    
+    padding-top:40px;
+    margin-left:30%;  
 }
 
 .header-modal-signin-2 {
-    display: inline-block;
-    width: 50%;
+    padding-top:40px;
+   
+ 
 }
 
 .icon-social {
     text-align: right;
+    padding-top:5px;
    
 }
 
@@ -81,24 +87,26 @@
     transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) .6s;
 }
 
-    .headers .icon-social i {
-        color: black;
-    }
+.headers .icon-social i {
+    color: black;
+}
 
-    .headers .headeritem-login a {
-        color: #38e2ee
-    }
-    .headers .headeritem-signin a {
-        color: #38e2ee
-    }
-    .headers .header-welcome-div a {
-        color: #38e2ee
-    }
+.headers .headeritem-login a {
+    color: #38e2ee
+}
+.headers .headeritem-signin a {
+    color: #38e2ee
+}
+.headers .header-welcome-div a {
+    color: #38e2ee
+}
     
-    .headers .header-welcome-div a {
-        color: #38e2ee
-    }
-
+.headers .header-welcome-div a {
+    color: #38e2ee
+}
+.headers .headeritem-login a:hover{
+    color:white;
+}
 .header-google {
     width: 100%;
 }
@@ -164,11 +172,7 @@
         }
        
 }
-@media only screen and (max-width:520px) {
-    .fonts{
-        font-size: 21px;
-    }
-}
+
 
 .headeritem-login {
     margin-left: 10%;
@@ -178,11 +182,16 @@
     border-radius: 20px;
     border: 1px solid #38e2ee;
     width: 70px;
+    cursor: pointer;
 }
 
 
     .headeritem-login a {
         color: white;
+        padding-top:20px;
+        padding-bottom: 20px;
+        padding-left: 3px;
+        padding-right: 3px;
     }
 
         .headeritem-login a:hover {
@@ -203,6 +212,7 @@
     padding: 10px;
     width: 90px;
     border-radius: 20px;
+    cursor: pointer;
 }
 
     .headeritem-signin:hover {
@@ -213,6 +223,11 @@
 
     .headeritem-signin a { 
         color: white;
+        padding-top:20px;
+        padding-bottom: 20px;
+        padding-left: 7px;
+        padding-right: 7px;
+        
     }
 
         .headeritem-signin a:hover {
