--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -10,7 +10,10 @@
     margin-bottom: 40px;
     padding-top:50px;
 }
-
+.snake-bg-bg{
+    background-image:url('../images/bg.png');
+    background-size: 100% 100%;
+}
 .snake-dot {
     position: absolute;
     width: 2%;
