--- a/src/components/TicTacToe.css
+++ b/src/components/TicTacToe.css
@@ -1,6 +1,8 @@
 .master {
     overflow: hidden;
     box-sizing: border-box;
+    background-image: url(../images/bg.png);
+    background-size: 100% 100%;
 }
 
 .side-bar {
@@ -88,13 +90,13 @@
     width: 120px;
     height: 60px;
     font-size: 20px;
-    background-color: #666D75;
+    background-color: #207fe4f3;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
-    border-radius: 3px;
+    text-align: center;
+    border-radius: 10px;
     color: white;
-    text-shadow: 3px 2px gray;
+    
     margin-left: 100px;
     margin-bottom: 20px;
 }
@@ -121,12 +123,13 @@
     width: 120px;
     height: 60px;
     font-size: 20px;
-    background-color: #666D75;
+    background-color: #20cde4;
     justify-content: center;
     align-items: center;
-    border: 2px solid black;
-    border-radius: 3px;
+    text-align: center;
+    border-radius: 10px;
     color: white;
-    text-shadow: 3px 2px gray;
+    
     margin-left: 100px;
+    margin-bottom: 20px;
 }
