--- a/src/components/onboard/joinroom.css
+++ b/src/components/onboard/joinroom.css
@@ -7,12 +7,26 @@
     margin-top: 50px;
     outline: none;
     width: 50%;
+    color:white
    
+}
+.chess-bg-bg{
+    background-image: url(../../images/bg.png);
+    background-size: 100% 100%;
+   
+}
+.chess-bg-bg-bg{
+    background-image: url(../../images/bg.png);
+}
+.chess-title-title{
+    color:white;
 }
 .chess-chess{
     font-family:'Press Start 2P';
-    text-shadow: 1px 2px 1px #38ccc5, 0 0 1px #f4f7f8;
-    font-size:40px
+    text-shadow: 1px 2px 1px #d4cba1, 0 0 1px #ec9e27;
+    font-size:40px;
+   
+    
 }
 .chess-submit {
     margin-top: 50px;
